# samwise-adcs-motor-flight

./: CMakeLists.txt  README.md  configure.sh
.github/workflows/: c_build.yaml  c_lint.yaml
scripts/: plot_serial.py  send_command.py
src/: constants.h  linalg.h  macros.h  main.c  main.cpp  pins.h  slate.h
src/drivers/adm1176/: adm1176.cpp  adm1176.h
src/drivers/motor/: motor.cpp  motor.h
src/drivers/neopixel/: neopixel.c  neopixel.h
src/drivers/watchdog/: watchdog.cpp  watchdog.h
src/gnc/: attitude_dynamics.cpp  attitude_dynamics.h  bdot.cpp  bdot.h  desaturation.cpp  desaturation.h  matrix_utils.cpp  matrix_utils.h  reaction_wheel_allocation.cpp  reaction_wheel_allocation.h  sun_vector.cpp  sun_vector.h
src/init/: init.cpp  init.h
src/util/: controller.h  timer_loop.cpp  timer_loop.h  uart_package.h
